--- a/templates/personal_event/index.html.twig
+++ b/templates/personal_event/index.html.twig
@@ -106,14 +106,17 @@
                 </div>
                 </div>
             </div>
-
-            <div class="card card-primary">
-                <div class="card-body p-0">
-                    <!-- THE CALENDAR -->
-                    <div id="calendar"></div>
+            <!-- /.col -->
+            <div class="col-md-9">
+                <div class="card card-primary">
+                    <div class="card-body p-0">
+                        <!-- THE CALENDAR -->
+                        <div id="calendar"></div>
+                    </div>
+                    <!-- /.card-body -->
                 </div>
-                <!-- /.card-body -->
             </div>
+            <!-- /.col -->
         </div>
         <!-- /.row -->
         </div><!-- /.container-fluid -->
