--- a/templates/personal_event/edit.html.twig
+++ b/templates/personal_event/edit.html.twig
@@ -1,9 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'adminlte.html.twig' %}
 
-{% block title %}Edit PersonalEvent{% endblock %}
+{% block title %}Editer évènement{% endblock %}
 
-{% block body %}
-    <h1>Edit PersonalEvent</h1>
+{% block mainContent %}
 
     {{ include('personal_event/_form.html.twig', {'button_label': 'Update'}) }}
 
