--- a/templates/personal_event/new.html.twig
+++ b/templates/personal_event/new.html.twig
@@ -1,9 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'adminlte.html.twig' %}
 
-{% block title %}New PersonalEvent{% endblock %}
+{% block title %}Nouvel évènement{% endblock %}
 
-{% block body %}
-    <h1>Create new PersonalEvent</h1>
+{% block mainContent %}
 
     {{ include('personal_event/_form.html.twig') }}
 
