--- a/templates/personal_event/show.html.twig
+++ b/templates/personal_event/show.html.twig
@@ -1,9 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'adminlte.html.twig' %}
 
-{% block title %}PersonalEvent{% endblock %}
+{% block title %}Evènement{% endblock %}
 
-{% block body %}
-    <h1>PersonalEvent</h1>
+{% block mainContent %}
 
     <table class="table">
         <tbody>
